load(local) file data fact table

--- a/code/etl_fact_table.ipynb
+++ b/code/etl_fact_table.ipynb
@@ -2573,6 +2573,25 @@
     "df_fact_article_popular['comment_created_at'] = df_comment['created_at']\n",
     "df_fact_article_popular"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fact_donation_transaction.to_csv(\"D:/Alterra Academy/capstone-project/Data_Engineer/Data_Loaded/fact_donation_transaction.csv\", index=False)\n",
+    "df_fact_volunteer_applications.to_csv(\"D:/Alterra Academy/capstone-project/Data_Engineer/Data_Loaded/fact_volunteer_applications.csv\", index=False)\n",
+    "df_fact_volunteer_testimoni.to_csv(\"D:/Alterra Academy/capstone-project/Data_Engineer/Data_Loaded/fact_volunteer_testimoni.csv\", index=False)\n",
+    "df_fact_article_popular.to_csv(\"D:/Alterra Academy/capstone-project/Data_Engineer/Data_Loaded/fact_article_popular.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
